tests/negative/gold/block4_test.gold
tests/negative/block4_test.toit:7:14: error: Unexpected block
    "foo" : (: debug it)
             ^~~~~~~~~~
tests/negative/block4_test.toit:7:13: error: Map values may not be blocks
    "foo" : (: debug it)
            ^
Compilation failed.
